# test_task_Myna_Labs

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  container.py  pyproject.toml
backend/api/: main.py
backend/data/: uow.py
backend/domain/: interfaces.py
backend/src/: config.py  container.py
backend/src/api/: main.py
backend/src/api/routers/: users.py
backend/src/api/schemas/: users.py
backend/src/data/: tables.py  uow.py
backend/src/data/repositories/: messages.py  users.py
backend/src/domain/: entites.py  exceptions.py  interfaces.py  types.py
backend/src/domain/use_cases/: create_user.py  get_messages.py  interfaces.py  send_message.py
backend/src/scripts/: create_db.py
backend/tests/: conftest.py  test_dialog.py  test_user.py
