[tool.poetry]
name = "test-task-nlp"
version = "0.1.0"
description = ""
authors = ["Ivan Moiseev"]
readme = "README.md"
packages = [{include = "test_task_nlp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
dependency-injector = "^4.41.0"
SQLAlchemy = { version = ">=1.4,<2", extras = ["asyncio", "mypy"] }
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"